--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,3 +1,41 @@
-<p>
-  login works!
-</p>
+<div class="login-container">
+  <div class="overlay"></div>
+  <div class="content-container">
+    <div class="header-container">
+      <h1 class="title">Log in...</h1>
+      <h3 class="title-comment">to your DSODentist account here:</h3>
+    </div>
+    <div class="form-container">
+      <button class="btn btn-default btn-linkedin">
+        <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
+        <span class="title">Log in with LinkedIn</span>
+      </button>
+      <p class="text-or">or</p>
+      <div class="input-group login-control">
+        <div class="input-group-prepend">
+          <i class="input-group-text fa fa-envelope"></i>
+        </div>
+        <input type="text" class="form-control" placeholder="Email address">
+      </div>
+      <div class="input-group login-control">
+        <div class="input-group-prepend">
+          <i class="input-group-text fa fa-lock"></i>
+        </div>
+        <input type="password" class="form-control" placeholder="Password">
+      </div>
+      <div class="remember-container">
+        <label class="checkbox-inline">
+          <input type="checkbox" value="">Remember me
+        </label>
+        <span class="forgot-pass">
+          Forgot password?
+        </span>
+      </div>
+      <button class="btn btn-default btn-login">Login</button>
+      <div class="join-container">
+        <span>Need to create an account?</span>
+        <button class="btn btn-default btn-join">Join</button>
+      </div>
+    </div>
+  </div>
+</div>
