--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between">
 
       <div class="brand">
-        <img src="./assets/images/dso-logo.png">
+        <a [routerLink]="['/']"><img src="./assets/images/dso-logo.png"></a>
       </div>
 
       <div class="col-sm-10">
@@ -13,7 +13,6 @@
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngFor="let nav of navigation">
