--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -3,7 +3,7 @@
 .nav-wrapper {
   background: rgba(0, 0, 0, 0.5);
   padding: 18px 47px;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
