--- a/src/app/pages/home/carousel.component.scss
+++ b/src/app/pages/home/carousel.component.scss
@@ -4,9 +4,13 @@
 
   .glide__slide {
     position: relative;
+    height: 100vh;
+    overflow: hidden;
 
     >img {
-      width: 100%;
+      width: 100%;   
+      height: 100vh;
+      object-fit: cover;
     }
 
     .slide-caption {
@@ -20,15 +24,15 @@
       h1 {
         font-size: 104px;
         color: $color-white;
-				font-weight: 300;
-				
+        font-weight: 300;
+
       }
 
       h2 {
         color: $color-white;
         font-size: 35px;
-				font-weight: 500;
-				margin-bottom: 20px;
+        font-weight: 500;
+        margin-bottom: 20px;
       }
 
       p {
