#DSTP-3 - signup template

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -34,7 +34,7 @@
       <button class="btn btn-default btn-login">Login</button>
       <div class="join-container">
         <span>Need to create an account?</span>
-        <button class="btn btn-default btn-join">Join</button>
+        <button class="btn btn-default btn-join" routerLink="/signup">Join</button>
       </div>
     </div>
   </div>
