--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,4 +1,3 @@
-// Colors
 $color-primary: #879AA8;
 $color-secondary: #5E6E7A;
 $text-main: #4a4a4a;
@@ -7,8 +6,23 @@ $color-strokes: #e9edf1;
 $color-success: #66af24;
 $color-error: #b85151;
 $color-alert: #f5a623;
-//colors
-
 $color-white: #ffffff;
 $deep-cerulean: #0077B6;
 $regent-gray: #8799A7;
+$dark-blue: #0a346e;
+$bondi_blue: #02A8B2;
+$tussock_color: #CA9954;
+$boulder_grey: #7D7C7C;
+$mine_grey: #333333;
+$black: #000000;
+$baseFontSize: 16; // Font Family
+$neue_hgd_Black: 'Haas Grot Disp 95';
+$neue_hgd_Thin: 'Haas Grot Disp 35';
+$neue_hgd_Light: 'Haas Grot Disp 45';
+$neue_hgd_Regular: 'NeueHaasGroteskText Pro';
+$neue_hgd_Bold: 'Haas Grot Disp 75';
+$neue_hgd_Medium: 'Haas Grot Disp 65';
+$neue_hgd_Roman: 'Haas Grot Disp 55 Roman';
+$helvetica_font: 'helvetica';
+$helvetica_neue: "Helvetica Neue",
+sans-serif;
