--- a/src/app/shared/rating.component.scss
+++ b/src/app/shared/rating.component.scss
@@ -11,6 +11,7 @@
         line-height: 20px;
         text-align: center;
         border-radius: 3px;
+        margin: 0 1px;
 
         &.filled {
         color: #fff;
