--- a/src/app/pages/home/latest.component.html
+++ b/src/app/pages/home/latest.component.html
@@ -29,6 +29,7 @@
         <div *ngFor="let item of trendingVideos">
           <dsod-trending-item [trendingItem]="item"></dsod-trending-item>
         </div>
+          <dsod-sponsored-ad></dsod-sponsored-ad>
       </section>
     </div>
   </div>
