- implemented auth interceptor and guard

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -6,7 +6,7 @@
       <h3 class="title-comment">to your DSODentist account here:</h3>
     </div>
     <div class="form-container">
-      <button class="btn btn-default btn-linkedin">
+      <button class="btn btn-default btn-linkedin" (click)="loginWithLinkedIn()">
         <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
         <span class="title">Log in with LinkedIn</span>
       </button>
