--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,3 +2,4 @@
 <dsod-home-ad-banner></dsod-home-ad-banner>
 <dsod-featured-topics></dsod-featured-topics>
 <dsod-latest></dsod-latest>
+<dsod-podcasts></dsod-podcasts>
