--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -27,3 +27,4 @@ $helvetica_font: 'helvetica';
 $helvetica_neue: "Helvetica Neue",sans-serif;
 $light_grey: #999999;
 $dark_grey: #363636;
+$alabaster_white: #f8f8f8;
