--- a/src/app/pages/home/latest.component.html
+++ b/src/app/pages/home/latest.component.html
@@ -23,13 +23,13 @@
         </div>
       </section>
     </div>
-    <div class="'col-xl-4'">
+    <div class="col-xl-4 col-lg-4">
       <section class="trending-videos">
         <h2 class="section-title">Trending Videos</h2>
         <div *ngFor="let item of trendingVideos">
           <dsod-trending-item [trendingItem]="item"></dsod-trending-item>
         </div>
-          <dsod-sponsored-ad></dsod-sponsored-ad>
+        <dsod-sponsored-ad></dsod-sponsored-ad>
       </section>
     </div>
   </div>
