--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,3 +3,13 @@
 <dsod-featured-topics></dsod-featured-topics>
 <dsod-latest></dsod-latest>
 <dsod-podcasts></dsod-podcasts>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-4 col-lg-6">
+        <dsod-events></dsod-events>
+      </div>
+
+    </div>
+  </div>
+</section>
