DSTP-48 added section labeled From Our Sponsors

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,7 +9,9 @@
       <div class="col-xl-4 col-lg-6">
         <dsod-events></dsod-events>
       </div>
-
+      <div class="col-xl-8 col-lg-6">
+        <dsod-our-sponsors></dsod-our-sponsors>
+      </div>
     </div>
   </div>
 </section>
