--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -24,7 +24,9 @@ $neue_hgd_Bold: 'Haas Grot Disp 75';
 $neue_hgd_Medium: 'Haas Grot Disp 65';
 $neue_hgd_Roman: 'Haas Grot Disp 55 Roman';
 $helvetica_font: 'helvetica';
-$helvetica_neue: "Helvetica Neue",sans-serif;
+$helvetica_neue: "Helvetica Neue",
+sans-serif;
 $light_grey: #999999;
 $dark_grey: #363636;
 $alabaster_white: #f8f8f8;
+$emulsion-grey: #191919;
