--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,13 +1,13 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-3 align-self-center">
-        <div class="ftr-logo">
+      <div class="col-xl-3 align-self-center">
+        <div class="ftr-logo text-lg-center">
           <a [routerLink]="['/']"><img src="/assets/images/ftr-logo.png" alt=""></a>
           <p>Your career. Your life. Your way.</p>
         </div>
       </div>
-      <div class="col-md-6 align-self-center">
+      <div class="col-xl-6 align-self-center">
         <ul class="ftr-nav">
           <li><a [routerLink]="['about']">About</a></li>
           <li><a [routerLink]="['contact']">Contact Us</a></li>
@@ -16,8 +16,8 @@
           <li><a [routerLink]="['adpolicy']">Ad Policy</a></li>
         </ul>
       </div>
-      <div class="col-md-3 align-self-center">
-        <ul class="social-links">
+      <div class="col-xl-3 align-self-center">
+        <ul class=" social-links justify-content-lg-center">
           <li><a href="javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
           <li><a href="javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
           <li><a href="javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -25,6 +25,6 @@
         </ul>
       </div>
     </div>
-    <p class="copyrights">©2018 DSO Dentist. All Rights Reserved.</p>
+    <p class="copyrights text-lg-center">©2018 DSO Dentist. All Rights Reserved.</p>
   </div>
 </footer>
