--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -20,17 +20,14 @@
                 </li>
                 <li class="nav-item search-area">
                   <div class="btn-group" dropdown>
-                    <button id="button-basic" dropdownToggle type="button" class="nav-link" aria-controls="dropdown-basic">
+                    <div id="search-box">
+                      <label for="search">search</label>
+                      <input type="text" class="form-control" name="search">
+                    </div>
+                    <button type="button" class="nav-link" enable-search>
                       <img src="./assets/images/search-icon.png">
                     </button>
-                    <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
-                      aria-labelledby="button-basic">
-                      <li role="menuitem">
-                        <input type="text" class="form-control">
-                      </li>                      
-                    </ul>
                   </div>
-
                 </li>
                 <li class="nav-item login-wrap">
                   <a [routerLink]="['login']" class="nav-link">Login</a>
