--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -9,99 +9,146 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-	nav.navbar{
-		padding: 0.5rem 0;	
-		ul.navbar-nav{
-			 margin: 10px 0px;
-			li.nav-item {
-				border-right: 1px solid #ffffff;
-				    align-items: center;
-				    display: flex;
-				a.nav-link {
-				  color: #ffffff !important;
-				  border-bottom: 1px solid transparent;
-				  padding: 0;
-				  margin: 0 20px;
-					font-size: 25px;
-					display: block;
-					&:hover {
-					  border-bottom: 1px solid #ffffff;
-					}
-					&.active {
-						border-bottom: 1px solid #ffffff;
-						padding: 0;						
-					}
 
-				}			
-				&:last-child {
-					border-right: none;
-				}
-				&.search-area{
-					.nav-link{
-						background: #000;
-						padding:5px 10px;
-						line-height: 24px;
-						border: none;
-						outline: none;
-						text-align: center;
-						margin: 0 20px;
-						cursor: pointer;
-					}
-				}
-				&.login-wrap {
-					a.nav-link{
-						background: #000;
-						padding:7px 10px;
-						line-height: 27px;
-						font-size: 24px;
-						padding: 6px 70px;
-						margin-right: 0;
-						border-bottom: none;
-					}
-				}
-			}
-		}
-	}
-  
-	.brand {
-		text-align: left;
-		padding-right: 15px;
-		img{
-			max-width: 100%;
-		}
-	}
+  nav.navbar {
+    padding: 0.5rem 0;
+
+    ul.navbar-nav {
+      margin: 10px 0px;
+
+      li.nav-item {
+        border-right: 1px solid #ffffff;
+        align-items: center;
+        display: flex;
+
+        a.nav-link {
+          color: #ffffff !important;
+          border-bottom: 1px solid transparent;
+          padding: 0;
+          margin: 0 20px;
+          font-size: 25px;
+          display: block;
+
+          &:hover {
+            border-bottom: 1px solid #ffffff;
+          }
+
+          &.active {
+            border-bottom: 1px solid #ffffff;
+            padding: 0;
+          }
+
+        }
+
+        &:last-child {
+          border-right: none;
+        }
+
+        &.search-area {
+
+          #search-box {
+            display: none;
+            position: absolute;
+            top: 50px;
+            right: 0;
+            width: 200px;
+            padding: 15px;
+            background: $color-primary;
+            border-radius: 5px;
+
+            &::before {
+              position: absolute;
+              width: 0;
+              height: 0;
+              border-left: 10px solid transparent;
+              border-right: 10px solid transparent;
+              border-bottom: 10px solid #879AA8;
+              right: 22px;
+              top: -10px;
+              content: "";
+            }
+
+            label {
+              font-size: 16px;
+              color: $color-white;
+              text-transform: capitalize;
+            }
+          }
+
+          .search-active {
+            display: block !important;
+          }
+
+          .nav-link {
+            background: #000;
+            padding: 5px 10px;
+            line-height: 24px;
+            border: none;
+            outline: none;
+            text-align: center;
+            margin: 0 20px;
+            cursor: pointer;
+          }
+        }
+
+        &.login-wrap {
+          a.nav-link {
+            background: #000;
+            padding: 7px 10px;
+            line-height: 27px;
+            font-size: 24px;
+            padding: 6px 70px;
+            margin-right: 0;
+            border-bottom: none;
+          }
+        }
+      }
+    }
+  }
+
+  .brand {
+    text-align: left;
+    padding-right: 15px;
+
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 
-@media only screen and ( max-width:1800px ){
-	.nav-wrapper {
-		nav.navbar {
-			ul.navbar-nav {
-				li.nav-item {
-					a.nav-link {
-					  margin: 0 13px;
-					  font-size: 19px;
-					}
-				}
-			}
-		}
-	}
+@media only screen and (max-width:1800px) {
+  .nav-wrapper {
+    nav.navbar {
+      ul.navbar-nav {
+        li.nav-item {
+          a.nav-link {
+            margin: 0 13px;
+            font-size: 19px;
+          }
+        }
+      }
+    }
+  }
 }
-@media only screen and ( max-width:1600px ){
-	.nav-wrapper[_ngcontent-c1] {
-	  padding: 8px 10px;
-	}
-	.nav-wrapper {
-		padding: 18px 10px;
-		 nav.navbar {
-			 ul.navbar-nav {
-			   li.nav-item.login-wrap {
-			     a.nav-link {
-			       font-size: 20px;
-			       padding: 6px 40px;
-			     }
-			   }
-			 }
-		 }
-	}
+
+@media only screen and (max-width:1600px) {
+  .nav-wrapper[_ngcontent-c1] {
+    padding: 8px 10px;
+  }
+
+  .nav-wrapper {
+    padding: 18px 10px;
+
+    nav.navbar {
+      ul.navbar-nav {
+        li.nav-item.login-wrap {
+          a.nav-link {
+            font-size: 20px;
+            padding: 6px 40px;
+          }
+        }
+      }
+    }
+  }
 }
