--- a/src/app/pages/home/events.component.scss
+++ b/src/app/pages/home/events.component.scss
@@ -51,6 +51,7 @@
   .event-content {
     background: $alabaster_white;
     padding: 15px 20px 15px 10px;
+    width: 100%;
 
     h3 {
       font-size: 23px;
