--- a/src/app/pages/home/featured-topics.component.html
+++ b/src/app/pages/home/featured-topics.component.html
@@ -1,38 +1,40 @@
 <section class="feautred-topics">
-        <div class="container">
-            <h2 class="section-title">
-                Featured Topics
-            </h2>
-            <div class="row">
-<!-- <dsod-content title="test" caption="text" contentType="video" src="/assets/images/king-chess.png" url="http://example.com"></dsod-content> -->
-                <div class="col-lg-6">
-                    <div class="feautred-block">
-                        <div class="feautred-block-header">
-                            <h4>Practice Management</h4>
-                                <dsod-rating></dsod-rating>
-                        </div>
-                        <div class="feautred-block-thumbnail">
-                            <img src="/assets/images/king-chess.png" class="img-fluid" alt="Feautred Thumbnail Large">
-                            <a href="" class="read-about">
-                                <img src="/assets/images/file-icon.png" alt="">
-                            </a>
-                        </div>
-                        <div class="feautred-block-content">
-                            <h2 class="topic-title mb-1">Five Recommendations for Being the Leader in Your DSO-Supported Practice</h2>
-                            <em>by DSODentist </em>
-                            <p class="mt-3">There are certain principles to good leadership, and if you follow them diligently, you will reach your full potential. This blog post features the five recommendations for being a leader in your
-                                DSO-supported
-                                practice… <a href="#">[more]</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-xl-6 col-lg-4" *ngFor="let topic of topics">
-                            <dsod-topic [topic]="topic"></dsod-topic>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="container">
+    <h2 class="section-title">
+      Featured Topics
+    </h2>
+    <div class="row">
+      <!-- <dsod-content title="test" caption="text" contentType="video" src="/assets/images/king-chess.png" url="http://example.com"></dsod-content> -->
+      <div class="col-lg-6">
+        <div class="feautred-block">
+          <div class="feautred-block-header">
+            <h4>Practice Management</h4>
+            <dsod-rating></dsod-rating>
+          </div>
+          <div class="feautred-block-thumbnail">
+            <img src="/assets/images/king-chess.png" class="img-fluid" alt="Feautred Thumbnail Large">
+            <a href="" class="read-about">
+              <img src="/assets/images/file-icon.png" alt="">
+            </a>
+          </div>
+          <div class="feautred-block-content">
+            <h2 class="topic-title mb-1">Five Recommendations for Being the Leader in Your DSO-Supported Practice</h2>
+            <em>by DSODentist </em>
+            <p class="mt-3">There are certain principles to good leadership, and if you follow them diligently, you
+              will reach your full potential. This blog post features the five recommendations for being a leader in
+              your
+              DSO-supported
+              practice… <a href="#">[more]</a></p>
+          </div>
         </div>
-    </section>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div class="col-xl-6 col-lg-6 col-md-6" *ngFor="let topic of topics">
+            <dsod-topic [topic]="topic"></dsod-topic>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
