--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -6,43 +6,45 @@
       <h3 class="title-comment">the DSODentist community today!</h3>
     </div>
     <div class="form-container">
-      <button class="btn btn-default btn-linkedin">
-        <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
-        <span class="title">Join using LinkedIn</span>
-      </button>
-      <p class="text-or">or</p>
-      <div class="input-group join-control">
-        <div class="input-group-prepend">
-          <i class="input-group-text fa fa-user"></i>
+      <form [formGroup]="signUpForm">
+        <button class="btn btn-default btn-linkedin">
+          <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
+          <span class="title">Join using LinkedIn</span>
+        </button>
+        <p class="text-or">or</p>
+        <div class="input-group join-control">
+          <div class="input-group-prepend">
+            <i class="input-group-text fa fa-user"></i>
+          </div>
+          <input type="text" class="form-control" placeholder="Your name" formControlName="full_name">
         </div>
-        <input type="text" class="form-control" placeholder="Your name">
-      </div>
-      <div class="input-group join-control">
-        <div class="input-group-prepend">
-          <i class="input-group-text fa fa-envelope"></i>
+        <div class="input-group join-control">
+          <div class="input-group-prepend">
+            <i class="input-group-text fa fa-envelope"></i>
+          </div>
+          <input type="text" class="form-control" placeholder="Email address" formControlName="username">
         </div>
-        <input type="text" class="form-control" placeholder="Email address">
-      </div>
-      <div class="input-group join-control">
-        <div class="input-group-prepend">
-          <i class="input-group-text fa fa-lock"></i>
+        <div class="input-group join-control">
+          <div class="input-group-prepend">
+            <i class="input-group-text fa fa-lock"></i>
+          </div>
+          <input type="password" class="form-control" placeholder="Password" formControlName="password">
         </div>
-        <input type="password" class="form-control" placeholder="Password">
-      </div>
-      <div class="pass-requirement-container">
-        <label class="checkbox-inline">
-          <input type="checkbox" value="">Password Requirements
-        </label>
-      </div>
-      <div class="terms-container">
-        <p>By creating an account, you agree to our</p>
-        <p><a>Terms of Use</a> and <a>Privacy Policy</a></p>
-      </div>
-      <button class="btn btn-default btn-join">Join</button>
-      <div class="login-form-container">
-        <span>Already a member?</span>
-        <button class="btn btn-default btn-login" routerLink="/login">Login</button>
-      </div>
+        <div class="pass-requirement-container">
+          <label class="checkbox-inline">
+            <input type="checkbox" value="">Password Requirements
+          </label>
+        </div>
+        <div class="terms-container">
+          <p>By creating an account, you agree to our</p>
+          <p><a>Terms of Use</a> and <a>Privacy Policy</a></p>
+        </div>
+        <button class="btn btn-default btn-join" [disabled]="signUpForm.invalid" (click)="signUp()">Join</button>
+        <div class="login-form-container">
+          <span>Already a member?</span>
+          <button class="btn btn-default btn-login" routerLink="/login">Login</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
