- integrated linkedin login api

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -3,7 +3,7 @@
 footer {
   background: $emulsion-grey;
   padding: 64px 0 20px;
-  margin-top: 52px;
+  // margin-top: 52px;
 
   .ftr-logo {
     p {
@@ -68,7 +68,7 @@ footer {
   footer {
     background: $emulsion-grey;
     padding: 64px 0 20px;
-    margin-top: 52px;
+    // margin-top: 52px;
 
     ul.ftr-nav {
       li {
