--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="form-container">
       <form [formGroup]="signUpForm">
-        <button class="btn btn-default btn-linkedin">
+        <button class="btn btn-default btn-linkedin" (click)="loginWithLinkedIn()">
           <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
           <span class="title">Join using LinkedIn</span>
         </button>
