--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngFor="let nav of navigation">
-                  <a class="nav-link" routerLink={{nav.link}} routerLinkActive="active">{{nav.title}}</a>
+                  <a class="nav-link" routerLink={{nav.link}} routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">{{nav.title}}</a>
                 </li>
                 <li class="nav-item search-area">
                   <div class="btn-group" dropdown>
