--- a/src/app/pages/home/slider/carousel.component.scss
+++ b/src/app/pages/home/slider/carousel.component.scss
@@ -1,12 +1,3 @@
 @import 'variables';
 
-.home-banner {
-  .glide__arrows {
-    .glide__arrow {
-      padding: 0;
-      border: 0;
-      outline: none;
-      box-shadow: none;
-    }
-  }
-}
+.home-banner {}
