--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,21 +15,22 @@
 }
 
 
-h1{
-    font-size: 20px;
-    font-weight: 600;
-}
-h2{
-    font-size: 17px;
-    font-weight: 500;
+h1 {
+  font-size: 20px;
+  font-weight: 600;
 }
 
-body{
-    font-size: 13px;
+h2 {
+  font-size: 17px;
+  font-weight: 500;
 }
 
-a{
-    text-decoration: none !important;
+body {
+  font-size: 13px;
+}
+
+a {
+  text-decoration: none !important;
 }
 
 .container {
@@ -47,6 +48,15 @@ h2.section-title {
   font-family: $helvetica_font;
   font-weight: bold;
   margin-bottom: 35px;
+}
+
+.glide__arrows {
+  .glide__arrow {
+    padding: 0;
+    border: 0;
+    outline: none;
+    box-shadow: none;
+  }
 }
 
 // Generic Media Querries for
