--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between">
 
       <div class="brand">
-        <a [routerLink]="['/']"><img src="./assets/images/dso-logo.png"></a>
+        <a [routerLink]="['/']"><img class="img img-fluid" src="./assets/images/dso-logo.png"></a>
       </div>
 
       <div class="col-sm-10">
