--- a/src/app/pages/events/containers/events-page.component.html
+++ b/src/app/pages/events/containers/events-page.component.html
@@ -15,6 +15,7 @@
     <div class="col-md-3">
       <section class="filter-events">
         <dosd-filter-select label="Filter events by"></dosd-filter-select>
+        <dsod-event-training></dsod-event-training>
       </section>
     </div>
   </div>
