--- a/src/app/pages/events/components/card/event-card.component.html
+++ b/src/app/pages/events/components/card/event-card.component.html
@@ -1,1 +1,32 @@
-<p>event card</p>
+<div class="event-card">
+  <div class="event-card-header">
+    <span class="header-logo">
+      <img src="/assets/images/card-dso-logo.png" alt="">
+    </span>
+    <span class="sponsored-by">Online Talks</span>
+  </div>
+  <div class="event-card-level">
+    <span class="level-text">Virtual Event</span>
+    <span class="event-level"><img src="/assets/images/level-1.png" alt="">Beginner</span>
+  </div>
+  <div class="card-thumbnail">
+    <img src="/assets/images/card-thumbnail-2.png" alt="">
+  </div>
+  <div class="card-content">
+    <h3>Key Questions to Ask When Considering an Associateship</h3>
+    <span class="event-by">Dr. Niv Rajagopalan</span>
+    <p>This module will present best practices that allow you to use Invisalign outcome simulator in your
+      practice… <a href="#">[more] <i class="fa fa-chevron-down" aria-hidden="true"></i></a></p>
+  </div>
+  <div class="event-card-footer">
+    <div class="event-timing">
+      <span>Jan 26, 2019 | 1hr 30m </span>
+      <span>FREE</span>
+    </div>
+    <div class="event-city">Online | 9pm EST</div>
+    <div class="register-btn-wrap">
+      <a href="" class="card-action"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></a>
+      <a href="#" class="register-btn">Register</a>
+    </div>
+  </div>
+</div>
