--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,22 @@ h2.section-title {
   }
 }
 
+.p-t-115 {
+  padding-top: 115px;
+}
+
+.top-head {
+  padding: 20px 150px 20px 0;
+
+  ul {
+    li {
+      display: inline-block;
+      font-size: 17px;
+      color: $text-main;
+    }
+  }
+}
+
 // Generic Media Querries for
 @media only screen and (max-width:1680px) {
   h2.section-title {
