- implemented showing invalid msg content

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -14,6 +14,7 @@ $bondi_blue: #02A8B2;
 $tussock_color: #CA9954;
 $boulder_grey: #7D7C7C;
 $mine_grey: #333333;
+$valencia: #d84040;
 $black: #000000;
 $baseFontSize: 16; // Font Family
 $neue_hgd_Black: 'Haas Grot Disp 95';
