--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -6,23 +6,36 @@
       <h3 class="title-comment">to your DSODentist account here:</h3>
     </div>
     <div class="form-container">
-      <form [formGroup]="loginForm">
-        <button class="btn btn-default btn-linkedin" (click)="loginWithLinkedIn()">
+      <form [formGroup]="loginForm" (submit)="login()">
+        <button class="btn btn-default btn-linkedin" type="button" (click)="loginWithLinkedIn()">
           <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
           <span class="title">Log in with LinkedIn</span>
         </button>
         <p class="text-or">or</p>
-        <div class="input-group login-control">
+        <div class="form-group input-group login-control" [ngClass]="{'invalid-control': username.invalid && (username.dirty || username.touched)}">
           <div class="input-group-prepend">
             <i class="input-group-text fa fa-envelope"></i>
           </div>
           <input type="text" class="form-control" placeholder="Email address" formControlName="username">
+          <div class="invalid-msg-container" *ngIf="username.invalid && (username.dirty || username.touched)">
+            <span class="invalid-input" *ngIf="username.errors.required">The email can't be blank.</span>
+            <span class="invalid-input" *ngIf="username.errors.email">Please input correct email format.</span>
+          </div>
         </div>
-        <div class="input-group login-control">
+        <div class="input-group login-control" [ngClass]="{'invalid-control': password.invalid && (password.dirty || password.touched)}">
           <div class="input-group-prepend">
             <i class="input-group-text fa fa-lock"></i>
           </div>
-          <input type="password" class="form-control" placeholder="Password" formControlName="password">
+          <input [type]="isShowPassword ? 'text' : 'password'" class="form-control" placeholder="Password" formControlName="password">
+          <div class="password-visible-wrapper">
+            <a (click)="isShowPassword = !isShowPassword" class="action">{{isShowPassword ? 'Hide' : 'Show'}}</a>
+          </div>
+          <div class="invalid-msg-container" *ngIf="password.invalid && (password.dirty || password.touched)">
+            <span class="invalid-input" *ngIf="password.errors.required">The pasword can't be blank.</span>
+            <span class="invalid-input" *ngIf="password.value.length && password.errors">
+              Password should be at least 8-16 characters in length with at least one uppercase letter and one number.
+            </span>
+          </div>
         </div>
         <div class="remember-container">
           <label class="checkbox-inline">
@@ -32,7 +45,7 @@
             Forgot password?
           </span>
         </div>
-        <button class="btn btn-default btn-login" [disabled]="loginForm.invalid" (click)="login()">Login</button>
+        <button class="btn btn-default btn-login" type="submit" [disabled]="loginForm.invalid">Login</button>
         <div class="join-container">
           <span>Need to create an account?</span>
           <button class="btn btn-default btn-join" routerLink="/signup">Join</button>
