--- a/src/app/pages/auth/login/login.component.scss
+++ b/src/app/pages/auth/login/login.component.scss
@@ -70,6 +70,7 @@
           position: absolute;
           right: -300px;
           background-color: $color-primary;
+          opacity: 0.9;
           width: 260px;
           padding: 10px;
           &:before {
