--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -52,19 +52,49 @@
         margin: 5px 0;
       }
       .join-control {
-        height: 50px;
         margin-bottom: 10px;
+        &.invalid-control {
+          border: 2px solid $valencia;
+        }
+        .password-visible-wrapper {
+          background-color: $color-white;
+          color: $dark-blue;
+          align-items: center;
+          display: flex;
+          width: 50px;
+          justify-content: center;
+          a {
+            cursor: pointer;
+          }
+        }
+        .invalid-msg-container {
+          position: absolute;
+          right: -300px;
+          background-color: $color-primary;
+          opacity: 0.9;
+          width: 260px;
+          padding: 10px;
+          &:before {
+            content: "";
+            left: -15px;
+            border-right: 15px solid $color-primary;
+            border-bottom: 10px solid transparent;
+            border-top: 10px solid transparent;
+            position: absolute;
+          }
+        }
         i {
           border-radius: 0;
           background-color: $color-white;
-          width: 50px;
+          width: 48px;
+          height: 48px;
           justify-content: center;
           align-items: center;
           display: flex;
         }
         input {
-          border-left: 0;
-          height: 50px;
+          border: 0;
+          height: 48px;
           border-radius: 0;
         }
       }
