--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -41,7 +41,7 @@
           <label class="checkbox-inline">
             <input type="checkbox" value="">Remember me
           </label>
-          <span class="forgot-pass">
+          <span class="forgot-pass" routerLink="/reset-pass">
             Forgot password?
           </span>
         </div>
