DSTP-34 added podcast page components

--- a/src/app/pages/home/featured-topics.component.scss
+++ b/src/app/pages/home/featured-topics.component.scss
@@ -2,7 +2,7 @@
 // Featured Topics Section
 
 .feautred-topics {
-  font-family: $helvetica_neue;
+  font-family: $Arial;
 
   .feautred-block {
     margin: 15px 0;
