--- a/src/app/pages/home/our-sponsors.component.scss
+++ b/src/app/pages/home/our-sponsors.component.scss
@@ -22,7 +22,7 @@
 }
 
 .sponsors-ortho {
-  font-family: $helvetica_neue;
+  font-family: $Arial;
 
   .sponsors-ortho-block {
     margin: 15px 0 33px;
