--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -25,7 +25,7 @@ $neue_hgd_Bold: 'Haas Grot Disp 75';
 $neue_hgd_Medium: 'Haas Grot Disp 65';
 $neue_hgd_Roman: 'Haas Grot Disp 55 Roman';
 $helvetica_font: 'helvetica';
-$helvetica_neue: "Helvetica Neue",
+$Arial: Arial,
 sans-serif;
 $light_grey: #999999;
 $dark_grey: #363636;
