--- a/src/app/pages/events/components/card/event-card.component.scss
+++ b/src/app/pages/events/components/card/event-card.component.scss
@@ -68,7 +68,7 @@
       border-top: 1px solid $color-primary;
       font-size: 22px;
       line-height: 30px;
-      font-family: $helvetica_neue;
+      font-family: $Arial;
       padding-top: 8px;
       font-weight: 500;
       margin-bottom: 10px;
@@ -78,7 +78,7 @@
       font-size: 20px;
       font-style: italic;
       line-height: 26px;
-      font-family: $helvetica_neue;
+      font-family: $Arial;
     }
 
     p {
