--- a/src/app/pages/events/components/training/training.component.scss
+++ b/src/app/pages/events/components/training/training.component.scss
@@ -21,7 +21,7 @@
          color: $color-white;
          border-bottom: 1px solid $color-primary;
          padding-bottom: 15px;
-         font-family: $helvetica_neue;
+         font-family: $Arial;
          font-weight: 700;
          margin-bottom: 15px;
        }
@@ -30,7 +30,7 @@
          font-size: 45px;
          color: $color-white;
          line-height: 55px;
-         font-family: $helvetica_neue;
+         font-family: $Arial;
        }
      }
    }
@@ -39,7 +39,7 @@
      p {
        line-height: 30px;
        font-size: 17px;
-       font-family: $helvetica_neue;
+       font-family: $Arial;
        margin-bottom: 30px;
      }
 
@@ -51,7 +51,7 @@
          font-size: 17px;
          line-height: 30px;
          font-weight: 700;
-         font-family: $helvetica_neue;
+         font-family: $Arial;
          margin-bottom: 10px;
        }
      }
@@ -64,7 +64,7 @@
 
      h3 {
        font-size: 30px;
-       font-family: $helvetica_neue;
+       font-family: $Arial;
      }
 
      ul {
