--- a/src/app/shared/content-placeholder.component.scss
+++ b/src/app/shared/content-placeholder.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   .content-block {
-    font-family: $helvetica_neue;
+    font-family: $Arial;
     margin: 15px 0;
     background: #f8f8f8;
 
