--- a/src/app/shared/topic.component.scss
+++ b/src/app/shared/topic.component.scss
@@ -1,8 +1,8 @@
 @import 'variables.scss';
 
 :host {
-.feautred-block {
-		font-family: $helvetica_neue;
+  .feautred-block {
+    font-family: $Arial;
     margin: 15px 0;
     background: #f8f8f8;
 
@@ -110,7 +110,7 @@
     }
   }
 
-@media only screen and (max-width:1680px) {
+  @media only screen and (max-width:1680px) {
 
     .feautred-block {
       .feautred-block-header {
