--- a/src/app/pages/home/events.component.html
+++ b/src/app/pages/home/events.component.html
@@ -1,5 +1,5 @@
 <div class="events">
-  <h2 class="section-title">Events <a href="#">See all</a></h2>
+  <h2 class="section-title">Events <a [routerLink]="['./events']">See all</a></h2>
   <div class="event-block">
     <div class="event-date">
       <h3>Nov</h3>
