--- a/src/app/pages/home/featured-topics.component.html
+++ b/src/app/pages/home/featured-topics.component.html
@@ -24,7 +24,7 @@
               will reach your full potential. This blog post features the five recommendations for being a leader in
               your
               DSO-supported
-              practice… <a href="#">[more]</a></p>
+              practice… <a [routerLink]="['./article']">[more]</a></p>
           </div>
         </div>
       </div>
