--- a/src/app/pages/home/events.component.html
+++ b/src/app/pages/home/events.component.html
@@ -1,6 +1,6 @@
 <div class="events">
   <h2 class="section-title">Events <a [routerLink]="['./events']">See all</a></h2>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Nov</h3>
       <h4>15</h4>
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Dec</h3>
       <h4>07</h4>
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Jan</h3>
       <h4>26</h4>
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Feb</h3>
       <h4>10</h4>
@@ -72,7 +72,7 @@
       </div>
     </div>
   </div>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Mar</h3>
       <h4>22</h4>
@@ -90,7 +90,7 @@
       </div>
     </div>
   </div>
-  <div class="event-block">
+  <div class="event-block" [routerLink]="['./events']">
     <div class="event-date">
       <h3>Apr</h3>
       <h4>11</h4>
