DSTP-36 added video page components

--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -17,7 +17,7 @@
               <span class="by">by DSODentist</span>
             </div>
             <div class="col-lg-2">
-              <dsos-content-actions></dsos-content-actions>
+              <dsod-content-actions></dsod-content-actions>
             </div>
           </div>
         </div>
