--- a/src/app/pages/podcast/containers/podcast-page.component.html
+++ b/src/app/pages/podcast/containers/podcast-page.component.html
@@ -26,7 +26,7 @@
               <dsod-audio-player></dsod-audio-player>
             </div>
             <div class="col-lg-2">
-              <dsos-content-actions></dsos-content-actions>
+              <dsod-content-actions></dsod-content-actions>
             </div>
           </div>
         </div>
