--- a/src/app/pages/home/latest-item.component.scss
+++ b/src/app/pages/home/latest-item.component.scss
@@ -4,6 +4,7 @@
   font-family: $Arial;
   margin: 15px 0 33px;
   background: #f8f8f8;
+  cursor: pointer;
 
   .latest-block-header {
     display: flex;
