--- a/src/app/shared/content-action/content-action.component.scss
+++ b/src/app/shared/content-action/content-action.component.scss
@@ -1,31 +1,27 @@
 @import 'variables';
 
 .content-actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
 
   ul {
     padding-right: 45px;
+  }
+}
 
-    li {
-      text-align: center;
-      padding-bottom: 1px;
-      min-width: 95px;
-      border-bottom: 2px solid #ccc;
-      padding: 0 20px;
-      margin-bottom: 20px;
-      list-style: none;
+@media only screen and (max-width:1199px) {
+  .content-actions {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-bottom: 20px;
 
-      a {
-        display: inline-block;
-        color: $regent-gray;
-        font-size: 12px;
-
-        span {
-          display: block;
-          margin-bottom: 5px;
-        }
-      }
+    ul {
+      padding: 20px 0 0;
     }
   }
 }
