--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,6 @@
   box-sizing: border-box;
 }
 
-
 h1 {
   font-size: 20px;
   font-weight: 600;
@@ -48,6 +47,12 @@ h2.section-title {
   font-family: $helvetica_font;
   font-weight: bold;
   margin-bottom: 35px;
+}
+
+ul,
+li,
+ul li {
+  list-style: none;
 }
 
 .glide__arrows {
