fixed assets path

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,7 +8,7 @@
     <div class="form-container">
       <form [formGroup]="loginForm" (submit)="login()">
         <button class="btn btn-default btn-linkedin" type="button" (click)="loginWithLinkedIn()">
-          <img class="social-image" src="/assets/images/icons/icon-linkedin.png">
+          <img class="social-image" src="assets/images/icons/icon-linkedin.png">
           <span class="title">Log in with LinkedIn</span>
         </button>
         <p class="text-or">or</p>
@@ -26,7 +26,8 @@
           <div class="input-group-prepend">
             <i class="input-group-text fa fa-lock"></i>
           </div>
-          <input [type]="isShowPassword ? 'text' : 'password'" class="form-control" placeholder="Password" formControlName="password">
+          <input [type]="isShowPassword ? 'text' : 'password'" class="form-control" placeholder="Password"
+            formControlName="password">
           <div class="password-visible-wrapper">
             <a (click)="isShowPassword = !isShowPassword" class="action">{{isShowPassword ? 'Hide' : 'Show'}}</a>
           </div>
