--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.html
@@ -4,21 +4,21 @@
     <div class="our-sponsors">
       <div class="our-sponsors-header">
         <h4>
-          <img src="/assets/images/align-logo.png" alt="">
+          <img src="assets/images/align-logo.png" alt="">
           Sponsored content from Align Technology, Inc.
         </h4>
       </div>
       <dsod-content-placeholder by="DSODentist" title="Discover ways to achieve new practice growth"></dsod-content-placeholder>
       <div class="our-sponsors-header">
         <h4>
-          <img src="/assets/images/gsk-icon-sm.png" alt="">
+          <img src="assets/images/gsk-icon-sm.png" alt="">
           Sponsored content from GlaxoSmithKline
         </h4>
       </div>
       <dsod-content-placeholder by="DSODentist" title="Treating Patients with Dentin Hypersensitivity"></dsod-content-placeholder>
       <div class="our-sponsors-header">
         <h4>
-          <img src="/assets/images/nb-logo.png" alt="">
+          <img src="assets/images/nb-logo.png" alt="">
           Sponsored content from Nobel Biocare, N.A.
         </h4>
       </div>
@@ -28,9 +28,9 @@
   <div class="col-lg-6">
     <section class="sponsors-ortho">
       <div>
-        <dsod-media-content title="Orthodontics" placeholderImageSrc="/assets/images/sponsors-ortho.png"></dsod-media-content>
-        <dsod-media-content title="Oral Health" placeholderImageSrc="/assets/images/sponsors-ortho2.png"></dsod-media-content>
-        <dsod-media-content title="implant Dentisty" placeholderImageSrc="/assets/images/sponsors-ortho3.png"></dsod-media-content>
+        <dsod-media-content title="Orthodontics" placeholderImageSrc="assets/images/sponsors-ortho.png"></dsod-media-content>
+        <dsod-media-content title="Oral Health" placeholderImageSrc="assets/images/sponsors-ortho2.png"></dsod-media-content>
+        <dsod-media-content title="implant Dentisty" placeholderImageSrc="assets/images/sponsors-ortho3.png"></dsod-media-content>
       </div>
     </section>
   </div>
