--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between">
 
       <div class="brand">
-        <a [routerLink]="['/']"><img class="img img-fluid" src="./assets/images/dso-logo.png"></a>
+        <a [routerLink]="['/']"><img class="img img-fluid" src="assets/images/dso-logo.png"></a>
       </div>
 
       <div class="col-sm-10">
@@ -25,7 +25,7 @@
                       <input type="text" class="form-control" name="search">
                     </div>
                     <button type="button" class="nav-link" enable-search>
-                      <img src="./assets/images/search-icon.png">
+                      <img src="assets/images/search-icon.png">
                     </button>
                   </div>
                 </li>
