- created profile component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <dsod-navbar></dsod-navbar>
+<dsod-profile-panel></dsod-profile-panel>
 <router-outlet></router-outlet>
 <dsod-footer></dsod-footer>
