--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -9,43 +9,33 @@
   left: 0;
   right: 0;
   margin: 0 auto;
-
   nav.navbar {
     padding: 0.5rem 0;
-
     ul.navbar-nav {
       margin: 10px 0px;
-
       li.nav-item {
-        border-right: 1px solid #ffffff;
+        border-right: 1px solid $color-white;
         align-items: center;
         display: flex;
-
         a.nav-link {
-          color: #ffffff !important;
+          color: $color-white !important;
           border-bottom: 1px solid transparent;
           padding: 0;
           margin: 0 20px;
-          font-size: 25px;
+          font-size: 22px;
           display: block;
-
           &:hover {
-            border-bottom: 1px solid #ffffff;
+            border-bottom: 1px solid $color-white;
           }
-
           &.active {
-            border-bottom: 1px solid #ffffff;
+            border-bottom: 1px solid $color-white;
             padding: 0;
           }
-
         }
-
         &:last-child {
           border-right: none;
         }
-
         &.search-area {
-
           #search-box {
             display: none;
             position: absolute;
@@ -55,32 +45,28 @@
             padding: 15px;
             background: $color-primary;
             border-radius: 5px;
-
             &::before {
               position: absolute;
               width: 0;
               height: 0;
               border-left: 10px solid transparent;
               border-right: 10px solid transparent;
-              border-bottom: 10px solid #879AA8;
+              border-bottom: 10px solid $color-primary;
               right: 22px;
               top: -10px;
               content: "";
             }
-
             label {
               font-size: 16px;
               color: $color-white;
               text-transform: capitalize;
             }
           }
-
           .search-active {
             display: block !important;
           }
-
           .nav-link {
-            background: #000;
+            background: $black;
             padding: 5px 10px;
             line-height: 24px;
             border: none;
@@ -90,33 +76,47 @@
             cursor: pointer;
           }
         }
-
         &.login-wrap {
           a.nav-link {
-            background: #000;
+            background: $black;
             padding: 7px 10px;
             line-height: 27px;
-            font-size: 24px;
-            padding: 6px 70px;
-            margin-right: 0;
+            font-size: 22px;
+            padding: 6px 20px;
             border-bottom: none;
+            cursor: pointer;
+          }
+          .avatar-wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 0.5rem;
+            .avatar {
+              width: 50px;
+              height: 50px;
+              border-radius: 50%
+            }
+            .user-name {
+              display: flex;
+              flex-direction: column;
+              color: $color-white;
+              font-size: 20px;
+              padding: 0 10px;
+            }
           }
         }
       }
     }
   }
-
   .brand {
     text-align: left;
     padding-right: 15px;
     padding-top: 10px;
-
     img {
       max-width: 100%;
     }
   }
 }
-
 
 @media only screen and (max-width:1800px) {
   .nav-wrapper {
@@ -137,16 +137,14 @@
   .nav-wrapper[_ngcontent-c1] {
     padding: 8px 10px;
   }
-
   .nav-wrapper {
     padding: 18px 10px;
-
     nav.navbar {
       ul.navbar-nav {
         li.nav-item.login-wrap {
           a.nav-link {
             font-size: 20px;
-            padding: 6px 40px;
+            padding: 6px 20px;
           }
         }
       }
