- implemented profile view panel template

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,21 +1,31 @@
+$color-white: #ffffff;
+$alabaster_white: #f8f8f8;
+$color-strokes: #e9edf1;
+$dropdown_grey: #ebebeb;
+$color-alert: #f5a623;
+$tussock_color: #CA9954;
+$color-success: #66af24;
+$valencia: #d84040;
+$color-error: #b85151;
+$bondi_blue: #02A8B2;
+$layout-blue: #1898cd;
+$deep-cerulean: #0077B6;
+$dark-blue: #0a346e;
+$light_grey: #999999;
+$text-alternate: #9b9b9b;
+$gray: #929090;
 $color-primary: #879AA8;
+$regent-gray: #8799A7;
+$bali-hai: #8999a9;
+$boulder_grey: #7D7C7C;
 $color-secondary: #5E6E7A;
 $text-main: #4a4a4a;
-$text-alternate: #9b9b9b;
-$color-strokes: #e9edf1;
-$color-success: #66af24;
-$color-error: #b85151;
-$color-alert: #f5a623;
-$color-white: #ffffff;
-$deep-cerulean: #0077B6;
-$regent-gray: #8799A7;
-$dark-blue: #0a346e;
-$bondi_blue: #02A8B2;
-$tussock_color: #CA9954;
-$boulder_grey: #7D7C7C;
+$dark_grey: #363636;
 $mine_grey: #333333;
-$valencia: #d84040;
+$emulsion-grey: #191919;
+$cod_gray: #0A0A0A;
 $black: #000000;
+
 $baseFontSize: 16; // Font Family
 $neue_hgd_Black: 'Haas Grot Disp 95';
 $neue_hgd_Thin: 'Haas Grot Disp 35';
@@ -25,11 +35,4 @@ $neue_hgd_Bold: 'Haas Grot Disp 75';
 $neue_hgd_Medium: 'Haas Grot Disp 65';
 $neue_hgd_Roman: 'Haas Grot Disp 55 Roman';
 $helvetica_font: 'helvetica';
-$Arial: Arial,
-sans-serif;
-$light_grey: #999999;
-$dark_grey: #363636;
-$alabaster_white: #f8f8f8;
-$emulsion-grey: #191919;
-$layout-blue: #1898cd;
-$dropdown_grey: #ebebeb;
+$Arial: Arial, sans-serif;
