- implemented logout feature

--- a/src/app/layout/profile/profile-panel/profile-panel.component.scss
+++ b/src/app/layout/profile/profile-panel/profile-panel.component.scss
@@ -1,5 +1,15 @@
 .profile-container {
+  position: absolute;
+  right: -450px;
+  top: 150px;
+  width: 400px;
+  min-height: 500px;
+  z-index: 9;
   background-color: #3d3f39cc;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
+  transition: ease right 500ms;
+  &.opened {
+    right: 0;
+  }
 }
