--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -91,6 +91,7 @@
             align-items: center;
             justify-content: center;
             padding: 0 0.5rem;
+            cursor: pointer;
             .avatar {
               width: 50px;
               height: 50px;
@@ -102,6 +103,15 @@
               color: $color-white;
               font-size: 20px;
               padding: 0 10px;
+            }
+          }
+          .logged-in-dropdown {
+            background-color: rgba(0, 0, 0, 0.5);
+            .dropdown-item {
+              color: $color-white;
+              &:hover {
+                background-color: #ffffff33;
+              }
             }
           }
         }
